<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cuenta"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historial"

            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_mensajes"

            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_llamadas"

            android:title="@string/menu_tools" />

    </group>

    <item android:title="Ajustes">
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_acerca"
                android:title="@string/menu_share"/>

        </menu>
    </item>

</menu>
