<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quando"
            android:text="@string/titulo_inicio"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quando"
            android:text="@string/titulo_conductor"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/quando"
            android:text="@string/titulo_login"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20dp" />


        <LinearLayout
            android:id="@+id/lcuenta"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bar_layout"
            android:layout_marginTop="10dp"
            android:background="@color/plomo2"
            android:orientation="horizontal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:fontFamily="@font/quando"
            android:hint="@string/correo_cliente"
            android:inputType="text"
            android:shadowColor="@color/colorPrimary"
            android:text=""
            android:textColor="@color/gradient_start_color"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="15dp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/gradient_start_color"

            app:met_singleLineEllipsis="true" />

        <TextView
            android:id="@+id/b_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quando"
            android:text="@string/btn_continuar_login"
            android:textColor="@color/gradient_start_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:fontFamily="@font/quando"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:shadowColor="@color/colorPrimary"
            android:text=""
            android:textColor="@color/gradient_start_color"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="15dp"
            android:visibility="gone"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/gradient_start_color"
            app:met_singleLineEllipsis="true" />

        <CheckBox
            android:id="@+id/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:buttonTint="@color/gradient_end_color"
            android:textColor="@color/colonegro"
            android:text="@string/check"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quando"
            android:text="@string/contra_olvidada"
            android:textColor="@color/gradient_end_color"
            android:textSize="14dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btniniciar"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@color/gradient_start_color"
            android:fontFamily="@font/quando"
            android:text="@string/btn_iniciar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>


