<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:weightSum="10"
    tools:context=".Inicio" >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@null"
        app:cardElevation="10dp" >

        <Button
            android:layout_gravity="end"
            android:background="@drawable/ic_exit"
            android:id="@+id/cerrar_sesion"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp">

        </Button>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/banner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <!--TOP HEADER -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quando"
                android:text="LUNES, 22/11"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/quando"
                android:text="$30.0"
                android:textColor="#27aa0b"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--MIDDLE HEADER -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/quando"
                android:text="@string/ganancia_viaje"
                android:textSize="16sp"
                android:textColor="@color/colonegro"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quando"
                    android:text="@string/titulo_tarifa_basica"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tarifa_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="2.00"
                    android:textSize="16dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quando"
                    android:text="@string/duracion"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/duracionc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="3 min"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quando"
                    android:text="@string/distancia"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/distanciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="10 km"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quando"
                    android:text="@string/valor_estimado"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/costot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="10.00"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="@string/origen"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/quando"
                    android:text="Origen"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quando"
                    android:text="@string/destino"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTo"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:fontFamily="@font/quando"
                    android:text="Destino"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

